# expodht

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/expodht/: __init__.py  dht22.py  main.py
