[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "expodht"
authors = [{name = "Antonio", email = "antonio@zoftko.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
scripts = {"expodht" = "expodht.main:main"}
dependencies = [
    "pigpio>=1.7",
    "prometheus-client>=0.20"
]
